[gd_scene load_steps=11 format=2]

[ext_resource path="res://InventorySystem/Widgets/FloatingWindow.gd" type="Script" id=1]
[ext_resource path="res://InventorySystem/Widgets/InventoryTheme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.556863, 0.807843, 0.929412, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.227451, 0.454902, 0.564706, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.407843, 0.67451, 0.803922, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.25098, 0.34902, 0.760784, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.396078, 0.431373, 0.45098, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.333333, 0.690196, 0.858824, 1 )

[sub_resource type="Animation" id=7]
resource_name = "Minimize"
length = 0.2
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.05, 0, 0, -0.05, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.05, 0, 0, -0.05, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="FloatingWindow" type="Panel"]
margin_right = 400.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 400 )
rect_clip_content = true
mouse_filter = 2
script = ExtResource( 1 )

[node name="ContentMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ContentMargin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 392.0
margin_bottom = 392.0
mouse_filter = 2
custom_constants/separation = 8

[node name="Panel" type="Panel" parent="ContentMargin/VBoxContainer"]
margin_right = 384.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
custom_styles/panel = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="ContentMargin/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Title" type="Label" parent="ContentMargin/VBoxContainer/Panel/CenterContainer"]
margin_left = 192.0
margin_top = 5.0
margin_right = 192.0
margin_bottom = 19.0

[node name="HBoxContainer" type="HBoxContainer" parent="ContentMargin/VBoxContainer/Panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -56.0
margin_top = 2.0
margin_right = -8.0
margin_bottom = -2.0
mouse_filter = 2
alignment = 1

[node name="MinimizeButton" type="Button" parent="ContentMargin/VBoxContainer/Panel/HBoxContainer"]
margin_left = 2.0
margin_right = 22.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0
text = "-"
icon_align = 1

[node name="CloseButton" type="Button" parent="ContentMargin/VBoxContainer/Panel/HBoxContainer"]
margin_left = 26.0
margin_right = 46.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0

[node name="Content" type="Control" parent="ContentMargin/VBoxContainer"]
margin_top = 32.0
margin_right = 384.0
margin_bottom = 384.0
rect_clip_content = true
mouse_filter = 2
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Minimize = SubResource( 7 )
anims/RESET = SubResource( 8 )

[connection signal="gui_input" from="ContentMargin/VBoxContainer/Panel" to="." method="_on_Panel_gui_input"]
[connection signal="pressed" from="ContentMargin/VBoxContainer/Panel/HBoxContainer/MinimizeButton" to="." method="_on_MinimizeButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
